[package]
name = "init-anteroom"
version = "0.2.0"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "init_anteroom"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.2.0"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
anteroom = { version = "0.2.0", path = "../../components/anteroom", features = ["cpi"] }
map = { version = "0.2.0", path = "../../components/map", features = ["cpi"] }
