[package]
name = "cash-outc"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cash_outc"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.10"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1" 
serde = { version = "1.0", features = ["derive"] }
anteroom = { version = "0.1.10", path = "../../components/anteroom", features = ["cpi"] }
player = { version = "0.1.10", path = "../../components/player", features = ["cpi"] }
