[package]
name = "eat-food"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eat_food"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.8"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
maplite = { version = "0.1.8", path = "../../components/maplite", features = ["cpi"] }
player1 = { version = "0.1.8", path = "../../components/player1", features = ["cpi"] }
section = { version = "0.1.8", path = "../../components/section", features = ["cpi"] }
