[package]
name = "eat-food"
version = "0.1.10"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "eat_food"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.10"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
map = { version = "0.1.10", path = "../../components/map", features = ["cpi"] }
player = { version = "0.1.10", path = "../../components/player", features = ["cpi"] }
section = { version = "0.1.10", path = "../../components/section", features = ["cpi"] }
