[package]
name = "exit-game"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exit_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.8"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
player1 = { version = "0.1.8", path = "../../components/player1", features = ["cpi"] }
maplite = { version = "0.1.8", path = "../../components/maplite", features = ["cpi"] }
