[package]
name = "exit-game"
version = "0.2.0"
description = "Created with Bolt"
edition = "2025"

[lib]
crate-type = ["cdylib", "lib"]
name = "exit_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.2.0"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
player = { version = "0.2.0", path = "../../components/player", features = ["cpi"] }
map = { version = "0.2.0", path = "../../components/map", features = ["cpi"] }
