[package]
name = "exit-gameb"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "exit_gameb"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.1.10"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
player = { version = "0.1.10", path = "../../components/player", features = ["cpi"] }
map = { version = "0.1.10", path = "../../components/map", features = ["cpi"] }
