[package]
name = "init-section"
version = "0.2.0"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "init_section"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
bolt-lang = "0.2.0"
anchor-lang = "0.30.1"
serde = { version = "1.0", features = ["derive"] }
section = { version = "0.2.0", path = "../../components/section", features = ["cpi"] }
map = { version = "0.2.0", path = "../../components/map", features = ["cpi"] }
