[package]
name = "join-game"
version = "0.1.8"
description = "Created with Bolt"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "join_game"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
bolt-lang = "0.1.8"
anchor-lang = "0.30.1"
anchor-spl = "0.30.1" 
serde = { version = "1.0", features = ["derive"] }
map = { version = "0.1.8", path = "../../components/map", features = ["cpi"] }
player = { version = "0.1.8", path = "../../components/player", features = ["cpi"] }
section = { version = "0.1.8", path = "../../components/section", features = ["cpi"] }
token_vault = { version = "0.1.0", path = "../../../../token-vault/programs/token-vault", features = ["cpi"] }
